PortugolParser.py
# Generated from Portugol.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class PortugolParser ( Parser ):

    grammarFileName = "Portugol.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'prog'", "';'", "'fim'", "','", "'funcao'", 
                     "'('", "')'", "':'", "'retorne'", "'se'", "'entao'", 
                     "'senao'", "'repita'", "'ate'", "'enquanto'", "'faca'", 
                     "'!'", "'para'", "'='", "'passo'", "'+'", "'-'", "'*'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TIPO", "OPERADOR_LOGICO", "SAIR", "ID", 
                      "NUM", "STRING", "WS" ]

    RULE_programa = 0
    RULE_declaracao_variaveis = 1
    RULE_variaveis = 2
    RULE_declaracao_parametros = 3
    RULE_lista_variaveis = 4
    RULE_declaracao_funcoes = 5
    RULE_funcao = 6
    RULE_lista_comandos = 7
    RULE_comando = 8
    RULE_retorne = 9
    RULE_se_entao = 10
    RULE_chamada_funcao = 11
    RULE_chamada_funcao_simples = 12
    RULE_repita = 13
    RULE_lista_parametros = 14
    RULE_enquanto = 15
    RULE_teste_logico = 16
    RULE_para = 17
    RULE_atribuicao = 18
    RULE_expressao = 19
    RULE_termo = 20
    RULE_fator = 21

    ruleNames =  [ "programa", "declaracao_variaveis", "variaveis", "declaracao_parametros", 
                   "lista_variaveis", "declaracao_funcoes", "funcao", "lista_comandos", 
                   "comando", "retorne", "se_entao", "chamada_funcao", "chamada_funcao_simples", 
                   "repita", "lista_parametros", "enquanto", "teste_logico", 
                   "para", "atribuicao", "expressao", "termo", "fator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    TIPO=25
    OPERADOR_LOGICO=26
    SAIR=27
    ID=28
    NUM=29
    STRING=30
    WS=31

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PortugolParser.ID, 0)

        def declaracao_variaveis(self):
            return self.getTypedRuleContext(PortugolParser.Declaracao_variaveisContext,0)


        def declaracao_funcoes(self):
            return self.getTypedRuleContext(PortugolParser.Declaracao_funcoesContext,0)


        def lista_comandos(self):
            return self.getTypedRuleContext(PortugolParser.Lista_comandosContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = PortugolParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(PortugolParser.T__0)
            self.state = 45
            self.match(PortugolParser.ID)
            self.state = 46
            self.match(PortugolParser.T__1)
            self.state = 47
            self.declaracao_variaveis()
            self.state = 48
            self.declaracao_funcoes()
            self.state = 49
            self.lista_comandos()
            self.state = 50
            self.match(PortugolParser.T__2)
            self.state = 51
            self.match(PortugolParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declaracao_variaveisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variaveis(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PortugolParser.VariaveisContext)
            else:
                return self.getTypedRuleContext(PortugolParser.VariaveisContext,i)


        def getRuleIndex(self):
            return PortugolParser.RULE_declaracao_variaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_variaveis" ):
                listener.enterDeclaracao_variaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_variaveis" ):
                listener.exitDeclaracao_variaveis(self)




    def declaracao_variaveis(self):

        localctx = PortugolParser.Declaracao_variaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaracao_variaveis)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.variaveis()
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PortugolParser.TIPO):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VariaveisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(PortugolParser.TIPO, 0)

        def lista_variaveis(self):
            return self.getTypedRuleContext(PortugolParser.Lista_variaveisContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_variaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariaveis" ):
                listener.enterVariaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariaveis" ):
                listener.exitVariaveis(self)




    def variaveis(self):

        localctx = PortugolParser.VariaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variaveis)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(PortugolParser.TIPO)
            self.state = 59
            self.lista_variaveis()
            self.state = 60
            self.match(PortugolParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declaracao_parametrosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self, i:int=None):
            if i is None:
                return self.getTokens(PortugolParser.TIPO)
            else:
                return self.getToken(PortugolParser.TIPO, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PortugolParser.ID)
            else:
                return self.getToken(PortugolParser.ID, i)

        def getRuleIndex(self):
            return PortugolParser.RULE_declaracao_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_parametros" ):
                listener.enterDeclaracao_parametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_parametros" ):
                listener.exitDeclaracao_parametros(self)




    def declaracao_parametros(self):

        localctx = PortugolParser.Declaracao_parametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracao_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(PortugolParser.TIPO)
            self.state = 63
            self.match(PortugolParser.ID)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PortugolParser.T__3:
                self.state = 64
                self.match(PortugolParser.T__3)
                self.state = 65
                self.match(PortugolParser.TIPO)
                self.state = 66
                self.match(PortugolParser.ID)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lista_variaveisContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PortugolParser.ID, 0)

        def lista_variaveis(self):
            return self.getTypedRuleContext(PortugolParser.Lista_variaveisContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_lista_variaveis

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_variaveis" ):
                listener.enterLista_variaveis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_variaveis" ):
                listener.exitLista_variaveis(self)




    def lista_variaveis(self):

        localctx = PortugolParser.Lista_variaveisContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lista_variaveis)
        try:
            self.state = 76
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(PortugolParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(PortugolParser.ID)
                self.state = 74
                self.match(PortugolParser.T__3)
                self.state = 75
                self.lista_variaveis()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declaracao_funcoesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PortugolParser.FuncaoContext)
            else:
                return self.getTypedRuleContext(PortugolParser.FuncaoContext,i)


        def getRuleIndex(self):
            return PortugolParser.RULE_declaracao_funcoes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao_funcoes" ):
                listener.enterDeclaracao_funcoes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao_funcoes" ):
                listener.exitDeclaracao_funcoes(self)




    def declaracao_funcoes(self):

        localctx = PortugolParser.Declaracao_funcoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_declaracao_funcoes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PortugolParser.T__4:
                self.state = 78
                self.funcao()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PortugolParser.ID, 0)

        def lista_comandos(self):
            return self.getTypedRuleContext(PortugolParser.Lista_comandosContext,0)


        def declaracao_parametros(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PortugolParser.Declaracao_parametrosContext)
            else:
                return self.getTypedRuleContext(PortugolParser.Declaracao_parametrosContext,i)


        def TIPO(self):
            return self.getToken(PortugolParser.TIPO, 0)

        def retorne(self):
            return self.getTypedRuleContext(PortugolParser.RetorneContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_funcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncao" ):
                listener.enterFuncao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncao" ):
                listener.exitFuncao(self)




    def funcao(self):

        localctx = PortugolParser.FuncaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(PortugolParser.T__4)
            self.state = 85
            self.match(PortugolParser.ID)
            self.state = 86
            self.match(PortugolParser.T__5)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PortugolParser.TIPO:
                self.state = 87
                self.declaracao_parametros()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(PortugolParser.T__6)
            self.state = 96
            _la = self._input.LA(1)
            if _la==PortugolParser.T__7:
                self.state = 94
                self.match(PortugolParser.T__7)
                self.state = 95
                self.match(PortugolParser.TIPO)


            self.state = 98
            self.match(PortugolParser.T__1)
            self.state = 99
            self.lista_comandos()
            self.state = 101
            _la = self._input.LA(1)
            if _la==PortugolParser.T__8:
                self.state = 100
                self.retorne()


            self.state = 103
            self.match(PortugolParser.T__2)
            self.state = 104
            self.match(PortugolParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lista_comandosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PortugolParser.ComandoContext)
            else:
                return self.getTypedRuleContext(PortugolParser.ComandoContext,i)


        def getRuleIndex(self):
            return PortugolParser.RULE_lista_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_comandos" ):
                listener.enterLista_comandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_comandos" ):
                listener.exitLista_comandos(self)




    def lista_comandos(self):

        localctx = PortugolParser.Lista_comandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lista_comandos)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 106
                    self.comando()

                else:
                    raise NoViableAltException(self)
                self.state = 109 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ComandoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def se_entao(self):
            return self.getTypedRuleContext(PortugolParser.Se_entaoContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(PortugolParser.AtribuicaoContext,0)


        def para(self):
            return self.getTypedRuleContext(PortugolParser.ParaContext,0)


        def enquanto(self):
            return self.getTypedRuleContext(PortugolParser.EnquantoContext,0)


        def repita(self):
            return self.getTypedRuleContext(PortugolParser.RepitaContext,0)


        def chamada_funcao(self):
            return self.getTypedRuleContext(PortugolParser.Chamada_funcaoContext,0)


        def retorne(self):
            return self.getTypedRuleContext(PortugolParser.RetorneContext,0)


        def SAIR(self):
            return self.getToken(PortugolParser.SAIR, 0)

        def getRuleIndex(self):
            return PortugolParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = PortugolParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comando)
        try:
            self.state = 119
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.se_entao()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.atribuicao()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.para()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.enquanto()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.repita()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.chamada_funcao()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 117
                self.retorne()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 118
                self.match(PortugolParser.SAIR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RetorneContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PortugolParser.ID, 0)

        def NUM(self):
            return self.getToken(PortugolParser.NUM, 0)

        def expressao(self):
            return self.getTypedRuleContext(PortugolParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_retorne

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRetorne" ):
                listener.enterRetorne(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRetorne" ):
                listener.exitRetorne(self)




    def retorne(self):

        localctx = PortugolParser.RetorneContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_retorne)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(PortugolParser.T__8)
            self.state = 125
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 122
                self.match(PortugolParser.ID)
                pass

            elif la_ == 2:
                self.state = 123
                self.match(PortugolParser.NUM)
                pass

            elif la_ == 3:
                self.state = 124
                self.expressao(0)
                pass


            self.state = 127
            self.match(PortugolParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Se_entaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def teste_logico(self):
            return self.getTypedRuleContext(PortugolParser.Teste_logicoContext,0)


        def lista_comandos(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PortugolParser.Lista_comandosContext)
            else:
                return self.getTypedRuleContext(PortugolParser.Lista_comandosContext,i)


        def getRuleIndex(self):
            return PortugolParser.RULE_se_entao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSe_entao" ):
                listener.enterSe_entao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSe_entao" ):
                listener.exitSe_entao(self)




    def se_entao(self):

        localctx = PortugolParser.Se_entaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_se_entao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(PortugolParser.T__9)
            self.state = 130
            self.match(PortugolParser.T__5)
            self.state = 131
            self.teste_logico()
            self.state = 132
            self.match(PortugolParser.T__6)
            self.state = 133
            self.match(PortugolParser.T__10)
            self.state = 134
            self.lista_comandos()
            self.state = 137
            _la = self._input.LA(1)
            if _la==PortugolParser.T__11:
                self.state = 135
                self.match(PortugolParser.T__11)
                self.state = 136
                self.lista_comandos()


            self.state = 139
            self.match(PortugolParser.T__2)
            self.state = 140
            self.match(PortugolParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Chamada_funcaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PortugolParser.ID, 0)

        def lista_parametros(self):
            return self.getTypedRuleContext(PortugolParser.Lista_parametrosContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_chamada_funcao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChamada_funcao" ):
                listener.enterChamada_funcao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChamada_funcao" ):
                listener.exitChamada_funcao(self)




    def chamada_funcao(self):

        localctx = PortugolParser.Chamada_funcaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_chamada_funcao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(PortugolParser.ID)
            self.state = 143
            self.match(PortugolParser.T__5)
            self.state = 144
            self.lista_parametros()
            self.state = 145
            self.match(PortugolParser.T__6)
            self.state = 146
            self.match(PortugolParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Chamada_funcao_simplesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PortugolParser.ID, 0)

        def lista_parametros(self):
            return self.getTypedRuleContext(PortugolParser.Lista_parametrosContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_chamada_funcao_simples

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChamada_funcao_simples" ):
                listener.enterChamada_funcao_simples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChamada_funcao_simples" ):
                listener.exitChamada_funcao_simples(self)




    def chamada_funcao_simples(self):

        localctx = PortugolParser.Chamada_funcao_simplesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_chamada_funcao_simples)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(PortugolParser.ID)
            self.state = 149
            self.match(PortugolParser.T__5)
            self.state = 150
            self.lista_parametros()
            self.state = 151
            self.match(PortugolParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RepitaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lista_comandos(self):
            return self.getTypedRuleContext(PortugolParser.Lista_comandosContext,0)


        def teste_logico(self):
            return self.getTypedRuleContext(PortugolParser.Teste_logicoContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_repita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepita" ):
                listener.enterRepita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepita" ):
                listener.exitRepita(self)




    def repita(self):

        localctx = PortugolParser.RepitaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_repita)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(PortugolParser.T__12)
            self.state = 154
            self.lista_comandos()
            self.state = 155
            self.match(PortugolParser.T__13)
            self.state = 156
            self.match(PortugolParser.T__5)
            self.state = 157
            self.teste_logico()
            self.state = 158
            self.match(PortugolParser.T__6)
            self.state = 159
            self.match(PortugolParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Lista_parametrosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PortugolParser.ID, 0)

        def STRING(self):
            return self.getToken(PortugolParser.STRING, 0)

        def NUM(self):
            return self.getToken(PortugolParser.NUM, 0)

        def expressao(self):
            return self.getTypedRuleContext(PortugolParser.ExpressaoContext,0)


        def teste_logico(self):
            return self.getTypedRuleContext(PortugolParser.Teste_logicoContext,0)


        def chamada_funcao_simples(self):
            return self.getTypedRuleContext(PortugolParser.Chamada_funcao_simplesContext,0)


        def lista_parametros(self):
            return self.getTypedRuleContext(PortugolParser.Lista_parametrosContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_lista_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLista_parametros" ):
                listener.enterLista_parametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLista_parametros" ):
                listener.exitLista_parametros(self)




    def lista_parametros(self):

        localctx = PortugolParser.Lista_parametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_lista_parametros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self);
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 161
                self.match(PortugolParser.ID)
                pass

            elif la_ == 2:
                self.state = 162
                self.match(PortugolParser.STRING)
                pass

            elif la_ == 3:
                self.state = 163
                self.match(PortugolParser.NUM)
                pass

            elif la_ == 4:
                self.state = 164
                self.expressao(0)
                pass

            elif la_ == 5:
                self.state = 165
                self.teste_logico()
                pass

            elif la_ == 6:
                self.state = 166
                self.chamada_funcao_simples()
                pass


            self.state = 175
            _la = self._input.LA(1)
            if _la==PortugolParser.T__3:
                self.state = 170 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 169
                    self.match(PortugolParser.T__3)
                    self.state = 172 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==PortugolParser.T__3):
                        break

                self.state = 174
                self.lista_parametros()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnquantoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def teste_logico(self):
            return self.getTypedRuleContext(PortugolParser.Teste_logicoContext,0)


        def lista_comandos(self):
            return self.getTypedRuleContext(PortugolParser.Lista_comandosContext,0)


        def getRuleIndex(self):
            return PortugolParser.RULE_enquanto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnquanto" ):
                listener.enterEnquanto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnquanto" ):
                listener.exitEnquanto(self)




    def enquanto(self):

        localctx = PortugolParser.EnquantoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_enquanto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(PortugolParser.T__14)
            self.state = 178
            self.match(PortugolParser.T__5)
            self.state = 179
            self.teste_logico()
            self.state = 180
            self.match(PortugolParser.T__6)
            self.state = 181
            self.match(PortugolParser.T__15)
            self.state = 182
            self.lista_comandos()
            self.state = 183
            self.match(PortugolParser.T__2)
            self.state = 184
            self.match(PortugolParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Teste_logicoContext(ParserRuleContext):
